@@ -2,3 +2,4 @@
 .Rhistory
 .RData
 inst/doc
+.DS_Store
