@@ -1,8 +1,8 @@
 Package: mplot
 Type: Package
 Title: Graphical Model Stability and Variable Selection Procedures
-Version: 0.7.9-4
-Date: 2017-09-19
+Version: 0.7.9
+Date: 2017-11-03
 Authors@R: c(person("Garth", "Tarr", role = c("aut", "cre"), email = "garth.tarr@gmail.com"), person("Samuel", "Mueller", role = "aut", email = "samuel.mueller@sydney.edu.au"), person("Alan H", "Welsh", role = "aut", email = "alan.welsh@anu.edu.au"))
 Description: Model stability and variable inclusion plots [Mueller and Welsh
     (2010, <doi:10.1111/j.1751-5823.2010.00108.x>); Murray, Heritier and Mueller
@@ -23,6 +23,7 @@ Imports:
     parallel,
     bestglm,
     doParallel,
+    doRNG,
     plyr,
     shinydashboard,
     shiny,
