@@ -14,4 +14,5 @@ import(foreach)
 import(parallel)
 import(shiny)
 import(shinydashboard)
+importFrom(doRNG,"%dorng%")
 importFrom(dplyr,"%>%")
