@@ -5,7 +5,8 @@
 \title{Model stability and variable inclusion plots}
 \usage{
 vis(mf, nvmax, B = 100, lambda.max, nbest = "all", use.glmulti = FALSE,
-  cores, force.in = NULL, screen = FALSE, redundant = TRUE, ...)
+  cores, force.in = NULL, screen = FALSE, redundant = TRUE, seed = NULL,
+  ...)
 }
 \arguments{
 \item{mf}{a fitted 'full' model, the result of a call
@@ -38,6 +39,8 @@ Default = \code{FALSE}.}
 
 \item{redundant}{logical, whether or not to add a redundant
 variable.  Default = \code{TRUE}.}
+
+\item{seed}{random seed for reproducible results}
 
 \item{...}{further arguments (currently unused)}
 }
