@@ -1,3 +1,9 @@
+mplot 0.7.9 [2017-11-03]
+------------------------
+
+* Random seed parameter for reproducible results
+
+
 mplot 0.7.8 [2016-08-17]
 ------------------------
 
